<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FishDetailActivity">

    <ImageView
        android:id="@+id/fishDetailPhoto"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_height="300dp"/>

    <LinearLayout
        android:layout_below="@id/fishDetailPhoto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_fish_name"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fishDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_fish_type"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fishDetailType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_fish_Description"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fishDetailDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_purchase_date"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fishDetailPurchaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>