<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addAquariumMainLayout"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".AddAquariumActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/aquariumPhoto"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_aquarium_name"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:paddingLeft="@dimen/labelSidePadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/aquariumName"
                android:hint="@string/hint_aquarium_name"
                android:textSize="@dimen/valueTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/labelContainerPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/hint_aquarium_description"
                android:textSize="@dimen/labelTextSize"
                android:textColor="@color/labelTextColor"
                android:paddingLeft="@dimen/labelSidePadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/aquariumDescription"
                android:hint="@string/hint_aquarium_description"
                android:textSize="@dimen/valueTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1">

            <LinearLayout
                android:padding="@dimen/labelContainerPadding"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1">

                <TextView
                    android:text="@string/hint_aquarium_length"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/labelTextColor"
                    android:paddingLeft="@dimen/labelSidePadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/aquariumLength"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/valueTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:padding="@dimen/labelContainerPadding"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1">

                <TextView
                    android:text="@string/hint_aquarium_height"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/labelTextColor"
                    android:paddingLeft="@dimen/labelSidePadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/aquariumHeight"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/valueTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:padding="@dimen/labelContainerPadding"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1">

                <TextView
                    android:text="@string/hint_aquarium_wide"
                    android:textSize="@dimen/labelTextSize"
                    android:textColor="@color/labelTextColor"
                    android:paddingLeft="@dimen/labelSidePadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/aquariumWide"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/valueTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </GridLayout>

        <Button
            android:id="@+id/addAquariumSubmitButton"
            android:layout_margin="@dimen/labelContainerPadding"
            android:text="@string/save_button"
            android:textColor="@color/buttonTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>

        <ProgressBar
            android:id="@+id/loader"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>