<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AquariumDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detailAquariumPhotoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorSecondary">

            <ImageView
                android:id="@+id/detailAquariumPhoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/aquariumDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detailTitle"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:padding="15dp">

                <TextView
                    android:id="@+id/detailAquariumName"
                    android:textColor="@color/aquariumDetailName"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/detailAquariumDescription"
                    android:textColor="@color/aquariumDetailDesc"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/detailMeasure"
                android:layout_below="@id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="1"
                android:background="@android:color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <LinearLayout
                    android:padding="@dimen/labelContainerPadding"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1">

                    <TextView
                        android:text="@string/hint_aquarium_length"
                        android:textSize="@dimen/labelTextSize"
                        android:textColor="@color/labelTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:padding="@dimen/labelContainerPadding"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1">

                    <TextView
                        android:text="@string/hint_aquarium_height"
                        android:textSize="@dimen/labelTextSize"
                        android:textColor="@color/labelTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:padding="@dimen/labelContainerPadding"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_gravity="fill"
                    android:layout_columnWeight="1">

                    <TextView
                        android:text="@string/hint_aquarium_wide"
                        android:textSize="@dimen/labelTextSize"
                        android:textColor="@color/labelTextColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailWide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </GridLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fishListRecyclerView"
                android:layout_below="@id/detailMeasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/colorSecondary"
        app:borderWidth="0dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"/>

</android.support.design.widget.CoordinatorLayout>